src/main/resources/tests/Semantics/bad/characterValExpression.canAda
with Ada.Text_IO; use Ada.Text_IO;
procedure ExampleProcedure is
   X : character;
begin
    X := character'val('e'); -- Error: type mismatch
end ExampleProcedure;
